--- a/src/pages/blog/subpages/BlogStyle.css
+++ b/src/pages/blog/subpages/BlogStyle.css
@@ -51,10 +51,11 @@
   text-align: center;
   width: 64px;
   height: 64px;
-  background: #eee;
+  background: #0075a8;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
 }
 
 @media (max-width: 1199px) {
