--- a/src/pages/blog/subpages/BlogStyle.css
+++ b/src/pages/blog/subpages/BlogStyle.css
@@ -32,21 +32,6 @@
 .blog-dtil-page {
   padding-bottom: 40px;
 }
-
-.social-share-btn {
-  align-items: flex-end;
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  text-align: right;
-  top: 200px;
-  width: 1280px;
-  max-width: 97%;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-}
 .social-share-btn .copy-area {
   text-align: center;
   width: 64px;
@@ -67,4 +52,48 @@
 
 .wrapper.blog-dtil-page {
   max-width: 1000px;
+}
+
+
+.social-share-btn {
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  left: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 97%;
+  position: sticky;
+  right: 0;
+  text-align: right;
+  top: 130px;
+  width: 70px;
+  float: right;
+}
+#content.site-content #main {
+  overflow: initial !important;
+}
+body, html {
+  overflow: initial !important;
+}
+.blog-detail-description {
+  width: calc(100% - 100px);
+  float: left;
+}
+
+@media (max-width:767px) {
+  .social-share-btn svg, .social-share-btn .copy-area, .social-share-btn .copy-area svg {
+    width: 25px;
+    height: 25px;
+}
+
+.social-share-btn .copy-area {
+  padding: 4px;
+}
+.social-share-btn  {width: 30px;}
+.blog-detail-description {
+  width: calc(100% - 30px);
+  float: left;
+}
+.social-share-btn {top:160px}
 }
